# temp-hum-sensor

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: main.rs  sht3x.rs
